kubernetes/schema-registry/deployment.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: schema-registry
spec:
  selector:
    matchLabels:
      app: schema-registry
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
      - name: schema-registry
        image: 921942764047.dkr.ecr.us-east-1.amazonaws.com/schema-registry:$CODEBUILD_RESOLVED_SOURCE_VERSION
        ports:
        - containerPort: 8081
      "imagePullSecrets": [
        {
          "name": "aws-ecr-credentials"
        }
      ]
