kubernetes/schema-registry/service.yml
---
apiVersion: v1
kind: Service
metadata:
  # Note: Service name cannot be schema-registry otherwise environment variable used by application will be overwrite in container due to service creation.
  # See: https://kubernetes.io/docs/concepts/containers/container-environment-variables/
  name: schema-registry
  labels:
    app: schema-registry
spec:
  ports:
  - port: 8081
    name: app
  selector:
    app: schema-registry
