kubernetes/schema-registry/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: schema-registry-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: schema-registry
          servicePort: 8081
